# python_websocket_notifications

./: .bookmarks  .env  .gitignore  .test.env  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  test-requirements.txt
db/migrations/: create_channel.sql  create_notification_channel.sql  create_subscription.sql  initialize_db.sql
message_store/: Dockerfile  requirements.txt
message_store/src/: app_logic.py  schemas.py  web_app.py
message_store/test/: conftest.py  test_db_models.py  test_hellow_world.py  test_web_app.py  test_web_app.py.message_store
notifications_serivce/: docker-compose.yaml
notifications_service/: Dockerfile  user.py  web_app.py
notifications_service/src/: app_logic.py  config.py  crud.py  db_models.py  schemas.py  web_app.py
notifications_service/src/spec_utils/: channel_data_utils.py  channel_life_time_utils.py
notifications_service/test/: conftest.py  test_db_models.py  test_web_app.py
notifications_service/test/test_specs_utils/: test_channel_data.py  test_channel_life_time.py
shared/: database.py  db_models.py  env.py  schemas.py  user.py
shared/spec_utils/: channel_data_utils.py
test/: conftest.py  test_hello_world_notification_service.py  test_notification_channel.py  test_user.py  test_users.py  utils.py
