[project]
name = "python_websocket_notifications"
authors = [
 {name = "Jakub Buczyński", email = "jakub@buczynski.net.pl"},
]
description = "POC showing how one can subscribe a channel, and receive data updates automatically via websocket. Project meant for educational purposes only. "
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
version = "0.0.1"

[project.urls]
"Homepage" = "https://github.com/KubaTaba1uga/python_websocket_notifications"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.isort]
line_length = 88
force_alphabetical_sort_within_sections = true
force_single_line = true


[tool.mypy]
exclude = ["test_"]


